# AgentDemo

./: .gitignore  CMakeLists.txt  ag  main.py  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  toolchain
config/: settings.py
include/: agent.h  api_client.h  logger.h  logger_init.h
models/: agent.py  conversation.py
src/: agent.cpp  api_client.cpp  logger.cpp  main.cpp
utility/: helper.py
